# statement-crunch

./: .gitignore  README.md  pyproject.toml
statement_crunch/: aggregators.py  credit_statement.py  credit_statement_view.py  entry.py
statement_crunch/statement_types/: bmo_statement.py
tests/: test_aggregators.py  test_statement_parse.py
